--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.5"
+    "body-parser": "^1.15.2",
+    "expect": "^22.0.6",
+    "express": "^4.14.0",
+    "mocha": "^4.1.0",
+    "mongodb": "^2.2.5",
+    "mongoose": "^4.5.9",
+    "nodemon": "^1.14.11",
+    "supertest": "^3.0.0"
   }
 }
